Update: Fix misaligned `.form-check-input` from 1bb5440

--- a/packages/clay/src/scss/lexicon-base/_cards.scss
+++ b/packages/clay/src/scss/lexicon-base/_cards.scss
@@ -291,6 +291,7 @@ button.card-link {
 		color: $body-color;
 		display: inline;
 		padding-left: 0;
+		position: static;
 	}
 
 	&.active .card,
